crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@390.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr = int4multirange(int4range(10,20), int4range(30,40), int4range(50,60));"
---
SelectStmt@0..122
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..119
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Ascii61@51..52 "="
    Whitespace@52..53 " "
    FuncCall@53..119
      Ident@53..67 "int4multirange"
      Ascii40@67..68 "("
      FuncCall@68..83
        Ident@68..77 "int4range"
        Ascii40@77..78 "("
        AConst@78..80
          Iconst@78..80 "10"
        Ascii44@80..81 ","
        AConst@81..83
          Iconst@81..83 "20"
      Ascii41@83..84 ")"
      Ascii44@84..85 ","
      Whitespace@85..86 " "
      FuncCall@86..101
        Ident@86..95 "int4range"
        Ascii40@95..96 "("
        AConst@96..98
          Iconst@96..98 "30"
        Ascii44@98..99 ","
        AConst@99..101
          Iconst@99..101 "40"
      Ascii41@101..102 ")"
      Ascii44@102..103 ","
      Whitespace@103..104 " "
      FuncCall@104..119
        Ident@104..113 "int4range"
        Ascii40@113..114 "("
        AConst@114..116
          Iconst@114..116 "50"
        Ascii44@116..117 ","
        AConst@117..119
          Iconst@117..119 "60"
  Ascii41@119..120 ")"
  Ascii41@120..121 ")"
  Ascii59@121..122 ";"

