crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@396.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr >> int4range(100,500);"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..71
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..53 ">>"
    Whitespace@53..54 " "
    FuncCall@54..71
      Ident@54..63 "int4range"
      Ascii40@63..64 "("
      AConst@64..67
        Iconst@64..67 "100"
      Ascii44@67..68 ","
      AConst@68..71
        Iconst@68..71 "500"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

