crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@399.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr -|- int4range(100,500);"
---
SelectStmt@0..74
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..72
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..54 "-|-"
    Whitespace@54..55 " "
    FuncCall@55..72
      Ident@55..64 "int4range"
      Ascii40@64..65 "("
      AConst@65..68
        Iconst@65..68 "100"
      Ascii44@68..69 ","
      AConst@69..72
        Iconst@69..72 "500"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

